fixed spacing b/w nav & hero academy link

--- a/app/assets/stylesheets/hero.scss
+++ b/app/assets/stylesheets/hero.scss
@@ -65,6 +65,7 @@
   position: absolute;
   bottom: 25%;
   left: 50%;
+  top: 15%;
   transform: translate3d(-50%, 0%, 0);
   text-transform: uppercase;
 
